// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a styled component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`creates a styled component of a class component 1`] = `<View />`;

exports[`creates a styled component of a class component 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`creates a styled component of a functional component 1`] = `<View />`;

exports[`creates a styled component of a functional component 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`creates a styled component with combined static and dynamic styles 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 0,
    }
  }
/>
`;

exports[`creates a styled component with combined static and dynamic styles 2`] = `
<View
  padded={true}
  style={
    Object {
      "flex": 1,
      "padding": 10,
    }
  }
/>
`;

exports[`creates a styled component with dynamic styles based on props 1`] = `
<View
  style={
    Object {
      "padding": 0,
    }
  }
/>
`;

exports[`creates a styled component with dynamic styles based on props 2`] = `
<View
  padded={true}
  style={
    Object {
      "padding": 10,
    }
  }
/>
`;

exports[`creates a styled component with empty dynamic styles 1`] = `
<View
  style={Object {}}
/>
`;

exports[`creates a styled component with empty static styles 1`] = `
<View
  style={Object {}}
/>
`;

exports[`creates a styled component with multiple static style objects 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`creates a styled component with null dynamic styles 1`] = `
<View
  style={Object {}}
/>
`;

exports[`creates a styled component with null static styles 1`] = `
<View
  style={Object {}}
/>
`;
